kubernetes/mysql-db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql-db
  template:
    metadata:
      labels:
        app: mysql-db
    spec:
      containers:
        - name: mysql-db
          image: mysql:8.0.36
          ports:
            - containerPort: 3306
          resources:
            requests:
              cpu:   "250m"    # guaranteed 0.25 CPU
              memory: "512Mi"   # guaranteed 512 MiB RAM
            limits:
              cpu:   "1000m"   # up to 1 full CPU
              memory: "2Gi"     # up to 2 GiB RAM
          volumeMounts:
            - name: mysql-data
              mountPath: /var/lib/mysql
      volumes:
        - name: mysql-data
          persistentVolumeClaim:
            claimName: mysql-pvc
