kubernetes/phpapp-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webapp-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: webapp.thedevcloud.xyz
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: php-app-service
            namespace: default
            port:
              number: 80
  - host: phpmyadmin.thedevcloud.xyz
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: phpmyadmin-service
            namespace: default
            port:
              number: 8081
